--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -46,5 +46,5 @@
 @import 'components/close-icon';
 @import 'components/input-filter';
 @import 'components/overlay-modal';
-@import 'components/side-bar';
+@import 'components/info-bar';
 @import 'components/info-button';
