--- a/src/static/scss/components/_info-bar.scss
+++ b/src/static/scss/components/_info-bar.scss
@@ -1,4 +1,4 @@
-.side-bar {  
+.info-bar {
   color: $color-deep-gray;
 
   &:hover > .item {
@@ -30,6 +30,22 @@
     flex-direction: column;
 
     opacity: .5;
+
+    &.-video {
+      position: relative;
+
+      height: 0;
+      padding-bottom: 56.25%; /* 16:9 */
+
+      & > iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        width: 100%;
+        height: 100%;
+      }
+    }
   }
 
   & > .item > .title {
