--- a/src/templates/components/info-modal.html
+++ b/src/templates/components/info-modal.html
@@ -12,7 +12,7 @@
 
 
 {% block content %}
-<div class="side-bar -mobile">
+<div class="info-bar -mobile">
   {% if object.closing_date|is_open %}
   <span class="date -active">Aberto até {{ object.closing_date|date:"d/m/Y" }}</span>
   {% else %}
@@ -47,7 +47,7 @@
   {% endif %}
   {% if object.document.videos.all %}
     {% for video in object.document.videos.all %}
-    <div class="item">
+    <div class="item -video">
       <iframe width="100%" src="https://www.youtube.com/embed/{{video.video_id}}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     {% endfor %}
