--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -8,7 +8,7 @@
 <main class="document-body js-documentBody" data-selection-enabled="{% if request.user.is_authenticated %}true{% else %}false{% endif %}" data-group-id="{{ object.id }}">
   <div class="wrapper">
     <div class="invisible"></div>
-    <aside class="side-bar">
+    <aside class="info-bar">
       <div class="item">
         {% if object.document.document_type %}
         <span class="epigraph">{{ object.document.document_type.initials }} {{ object.document.number }}/{{ object.document.year }}</span>
