Add selectionend event with timeout
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -85,6 +85,7 @@
 {% endblock content %}
 
 {% block page_js %}
+  <script src="{% static 'js/utils/selectionEnd.js' %}"></script>
   <script src="{% static 'js/components/documentExcerpt/view.js' %}"></script>
   <script src="{% static 'js/components/documentBody/view.js' %}"></script>
   <script src="{% static 'js/components/infoButton/view.js' %}"></script>
