Update opinion onboarding

--- a/src/templates/components/opinion-onboarding.html
+++ b/src/templates/components/opinion-onboarding.html
@@ -4,14 +4,15 @@
 
 {% block extra_classes %}-onboarding js-opinionOnboarding{% endblock %}
 
+
 {% block extra_attributes %}{% endblock %}
 
 {% block header %}{% endblock %}
 
 {% block content %}
-  <img src="{% static 'img/select.svg' %}">
-  <h2>Selecione um trecho do texto para dar sua opinião</h2>
-  <p>Você pode selecionar um trecho de um artigo individual e digitar uma opinião sobre ele. Outras pessoas poderão depois dizer se concordam, discordam, ou são neutras quanto à sua opinião. </p>
+  <img src="{% static 'img/opinion-onboarding.svg' %}">
+  <h2>Avalie as opiniões de outros cidadãos </h2>
+  <p>Antes de dar a sua própria opinião, passe pelas opiniões de outros cidadãos.<br>Assim você contribui para entendermos melhor como a população avalia o texto e evita dar uma opinião igual a de outra pessoa!</p>
   <a href="#" class="solid-button -green js-button">Entendi</a>
 {% endblock content %}
 
