Add opinion onboarding

--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -84,6 +84,8 @@
 {% include "components/info-modal.html" %}
 
 {% include "components/opinion-onboarding.html" %}
+
+{% include "components/text-selection-onboarding.html" %}
 {% endblock content %}
 
 {% block page_js %}
@@ -104,5 +106,6 @@
   <script src="{% static 'js/components/textHighlight/view.js' %}"></script>
   <script src="{% static 'js/components/highlightTooltip/view.js' %}"></script>
   <script src="{% static 'js/components/opinionOnboarding/view.js' %}"></script>
+  <script src="{% static 'js/components/textSelectionOnboarding/view.js' %}"></script>
   <script src="{% static 'js/pages/document.js' %}"></script>
 {% endblock page_js %}
