--- a/src/static/scss/components/_document-body.scss
+++ b/src/static/scss/components/_document-body.scss
@@ -6,9 +6,13 @@
   padding-right: 4.6rem;
   padding-left: 4.6rem;
 
-  @include bp-mediumdown {
-    padding-right: 1.5rem;
-    padding-left: 1.5rem;
+  @include bp-smallonly {
+    padding-right: 1rem;
+    padding-left: 1rem;
+  }
+  @include bp-mediumonly {
+    padding-right: 1.6rem;
+    padding-left: 1.6rem;
   }
 
   &.-voidselection {
@@ -24,7 +28,11 @@
     margin-right: auto;
     margin-left: 3rem;
 
-    @include bp-mediumdown {
+    @include bp-smallonly {
+      margin-right: auto;
+      margin-left: auto;
+    }
+    @include bp-mediumonly {
       margin-left: 0;
     }
   }
@@ -93,7 +101,7 @@
     width: 14rem;
     margin-left: auto;
 
-    @include bp-mediumdown {
+    @include bp-smallonly {
       display: none;
 
       padding-left: 0;
@@ -120,9 +128,13 @@
 
     width: 14rem;
     height: calc(100% - 3.75rem);
-    padding-right: 1.5rem;
+    padding-right: 1rem;
 
     text-align: right;
+
+    @include bp-mediumonly {
+      width: 12rem;
+    }
 
     & > .item > .themes {
       justify-content: flex-end;
@@ -131,10 +143,10 @@
 
   & > .info-button {
     position: fixed;
-    right: 1.5rem;
-    bottom: 1.5rem;
+    right: 1rem;
+    bottom: 1rem;
 
-    @include bp-mediumup {
+    @include bp-smallup {
       display: none;
     }
   }
