--- a/src/templates/structure/app-modal.html
+++ b/src/templates/structure/app-modal.html
@@ -5,7 +5,7 @@
     <div class="header js-headerModal">
       <h2>{% block title_modal %}{% endblock%}</h2>
       {% block close_button %}
-        <div class="close js-closeModal"><img class="icon" src="{% static 'img/close.svg' %}"></div>
+        <div class="close-icon js-closeModal"><img class="icon" src="{% static 'img/close.svg' %}"></div>
       {% endblock close_button %}
     </div>
   {% endblock header %}
