--- a/src/templates/pages/new-document.html
+++ b/src/templates/pages/new-document.html
@@ -8,18 +8,32 @@
       <form class="document-form" method="POST">
         {% csrf_token %}
         {{form.non_field_errors}}
+        {% if object %}
+        <h2>Editar Documento</h2>
+        {% else %}
         <h2>Criar Novo Projeto</h2>
+        {% endif %}
         <div class="theme-autocomplete js-themeAutocomplete">
           <input class="js-input" type="text" name="theme-autocomplete">
           <label>{% trans "Tema" %}</label>
           {{form.themes.errors}}
           <div class="themes">
-            <span class="title _hidden js-title">Temas Adicionados:</span>
-            <ul class="tags js-tags"></ul>
+            <span class="title {% if not object.themes.all %}_hidden{% endif %} js-title">Temas Adicionados:</span>
+            <ul class="tags js-tags">
+              {% if object.themes.all %}
+                {% for theme in object.themes.all %}
+                  <li class="theme-tag js-tag -selected" data-theme-id="{{theme.id}}"><span class="dot" style="background-color: {{theme.color}};"></span>{{theme.name}}</li>
+                {% endfor %}
+              {% endif %}
+            </ul>
           </div>
+        {% if object.themes.all %}
+          {% for theme in object.themes.all %}
+          <input type="hidden" name="themes" value="{{theme.id}}">
+          {% endfor %}
+        {% endif %}
         </div>
         <div class="input-select">
-          <!-- <label for="{{form.document_type.id_for_label}}">{% trans "Tipo" %}</label> -->
           <div class="select">
             {{form.document_type}}
             <div class="icon"><i class="arrow"></i></div>
