Feature/documents mobile (#55)
* Create breakpoints
* Create info button
* Change modal
* Improve info modal
* Fix lint errors
* Fix margins
* Fix close icon modal

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -46,3 +46,5 @@
 @import 'components/close-icon';
 @import 'components/input-filter';
 @import 'components/overlay-modal';
+@import 'components/info-bar';
+@import 'components/info-button';
