Fix simple link

--- a/src/static/scss/components/_app-modal.scss
+++ b/src/static/scss/components/_app-modal.scss
@@ -139,9 +139,8 @@
     padding: .5rem 2rem;
   }
 
-  & > .content > .footer > .simple-link {
-    margin: 0 auto;
-    margin-top: 1rem;
+  & > .content .footer > .simple-link {
+    margin-top: 1.5rem;
   }
 
   & > .content > .footer > .info-text {
