--- a/src/templates/components/opinion-modal.html
+++ b/src/templates/components/opinion-modal.html
@@ -40,7 +40,9 @@
           <a href="#" class="solid-button -gray js-opinionButton" data-opinion="neutral">Neutro</a>
           <a href="#" class="solid-button -red js-opinionButton" data-opinion="reject">Discordo</a>
         </div>
-        <a href="#" class="simple-link js-nextOpinion">Próxima Opinião</a>
+        <div class="simple-link">
+          <a href="#" class="js-nextOpinion">Próxima Opinião</a>
+        </div>
       </div>
     </div>
   {% endfor %}
