Fix modal triggers when user is signed off and when there are 0 opinions

--- a/src/templates/components/opinion-onboarding.html
+++ b/src/templates/components/opinion-onboarding.html
@@ -5,7 +5,7 @@
 {% block extra_classes %}-onboarding js-opinionOnboarding{% endblock %}
 
 
-{% block extra_attributes %}{% endblock %}
+{% block extra_attributes %}{% if request.user.is_authenticated %} data-is-authenticated="true" {% endif %}{% endblock %}
 
 {% block header %}{% endblock %}
 
