Fix missing class for styling

--- a/src/templates/components/opinion-modal.html
+++ b/src/templates/components/opinion-modal.html
@@ -29,7 +29,7 @@
         <img src="{% static 'img/atention.svg' %}">
         <h3>E deu a seguinte opinião nele:</h3>
       </span>
-      <p class="js-suggestion">{{suggestion.content}}</p>
+      <p class="suggestion js-suggestion">{{suggestion.content}}</p>
       <div class="footer">
         <span class="info-text">
           <img src="{% static 'img/information.svg' %}">
