Refactor all buttons
.solid-button is now a more generic .app-button.
The .simple-link is now the .-clear variant of the solid-button

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -23,11 +23,10 @@
 @import 'components/projects-list';
 @import 'components/simple-card';
 @import 'components/voting-action';
-@import 'components/solid-button';
+@import 'components/app-button';
 @import 'components/text-highlight';
 @import 'components/app-modal';
 @import 'components/opinion-card';
-@import 'components/simple-link';
 @import 'components/text-off';
 @import 'components/info-text';
 @import 'components/suggestion-opinion';
