--- a/src/static/scss/components/_section-group.scss
+++ b/src/static/scss/components/_section-group.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
   padding-top: 3.75rem;
 
-  & > form > .solid-button {
+  & > form > .app-button {
     margin-top: 1.5rem;
     margin-left: auto;
   }
