--- a/src/templates/components/opinion-onboarding.html
+++ b/src/templates/components/opinion-onboarding.html
@@ -12,7 +12,7 @@
   <img src="{% static 'img/opinion-onboarding.svg' %}">
   <h2>Avalie as opiniões de outros cidadãos </h2>
   <p>Antes de dar a sua própria opinião, passe pelas opiniões de outros cidadãos.<br>Assim você contribui para entendermos melhor como a população avalia o texto e evita dar uma opinião igual a de outra pessoa!</p>
-  <a href="#" class="solid-button -green js-button">Entendi</a>
+  <a href="#" class="app-button -green js-button">Entendi</a>
 {% endblock content %}
 
 </div>
