--- a/src/templates/components/text-selection-onboarding.html
+++ b/src/templates/components/text-selection-onboarding.html
@@ -13,7 +13,7 @@
   <img src="{% static 'img/text-select-onboarding.svg' %}">
   <h2>Selecione um trecho do texto para dar sua opinião</h2>
   <p>Escolha um trecho de um artigo individual e digite uma opinião sobre ele. Basta dar um longo toque sobre o texto ou clicar e arrastar o mouse para selecioná-lo.</p>
-  <a href="#" class="solid-button -green js-button">Entendi</a>
+  <a href="#" class="app-button -green js-button">Entendi</a>
 {% endblock content %}
 
 </div>
