--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -62,7 +62,7 @@
       </div>
     </div>
 
-    <button class="solid-button -green">Salvar</button>
+    <button class="app-button -green">Salvar</button>
   </form>
 </main>
 {% include "components/filter-modal.html" %}
