--- a/src/templates/pages/new-document.html
+++ b/src/templates/pages/new-document.html
@@ -62,7 +62,7 @@
           <label for="{{form.description.id_for_label}}">{% trans "Descrição" %}</label>
           {{form.description.errors}}
         </div>
-        <button class="solid-button -green">Enviar</button>
+        <button class="app-button -green">Enviar</button>
       </form>
     </div>
   </main>
