--- a/src/static/scss/components/_document-form.scss
+++ b/src/static/scss/components/_document-form.scss
@@ -1,7 +1,7 @@
 .document-form {
   padding: 0 5rem;
 
-  & > .solid-button {
+  & > .app-button {
     margin-top: 2rem;
     margin-left: auto;
   }
