Create start header

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -20,8 +20,6 @@
 @import 'components/nav-bar';
 @import 'components/nav-burger';
 @import 'components/nav-menu';
-@import 'components/home-section';
-@import 'components/hero-section';
 @import 'components/projects-list';
 @import 'components/simple-card';
 @import 'components/voting-action';
@@ -48,6 +46,7 @@
 @import 'components/overlay-modal';
 @import 'components/info-bar';
 @import 'components/info-button';
+@import 'components/start-header';
 
 // Vendor
 @import 'vendor/tooltip';
