Add mixin for including icons

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -5,6 +5,7 @@
 @import 'ambience/typography';
 
 // Base
+@import 'base/icons';
 @import 'base/responsive';
 @import 'base/reusables';
 @import 'base/unclassed';
