--- a/src/templates/components/opinion-modal.html
+++ b/src/templates/components/opinion-modal.html
@@ -9,39 +9,42 @@
 
 {% block content %}
   {% for suggestion in suggestions %}
-    <div class="opinion-card -active js-opinionCard"
+    <article class="opinion-card -active js-opinionCard"
       data-suggestion-id="{{suggestion.id}}"
       data-excerpt-id="{{suggestion.excerpt.id}}"
       data-user-id="{{suggestion.author.id}}">
 
-      <div class="header js-headerModal">
+      <header class="js-headerModal">
         <h2>Você concorda?</h2>
         <div class="close js-closeModal"><img class="icon" src="{% static 'img/close.svg' %}"></div>
-      </div>
-      <span class="info-text js-userInfo">
-        <img class="js-userAvatar" src="{{suggestion.author.profile.avatar_url}}">
-        <h3>{{suggestion.author.get_full_name}} destacou o trecho:</h3>
-      </span>
-      <p class="excerpt js-documentExcerpt">
-        {% highlight_suggestion suggestion %}
-      </p>
-      <span class="info-text">
-        <img src="{% static 'img/atention.svg' %}">
-        <h3>E deu a seguinte opinião nele:</h3>
-      </span>
-      <p class="suggestion js-suggestion">{{suggestion.content}}</p>
-      <div class="footer">
-        <span class="info-text">
-          <img src="{% static 'img/information.svg' %}">
-          <h3>Você concorda com essa opinião?</h3>
+      </header>
+
+      <div class="highlight">
+        <span class="info-text js-userInfo">
+          <img class="js-userAvatar" src="{{suggestion.author.profile.avatar_url}}">
+          <h3>{{suggestion.author.get_full_name}} destacou o trecho:</h3>
         </span>
-        <div class="actions">
-          <a href="#" class="solid-button -green js-opinionButton" data-opinion="approve">Concordo</a>
-          <a href="#" class="solid-button -gray js-opinionButton" data-opinion="neutral">Neutro</a>
-          <a href="#" class="solid-button -red js-opinionButton" data-opinion="reject">Discordo</a>
-        </div>
-        <a href="#" class="simple-link js-nextOpinion">Próxima Opinião</a>
+        
+        <p class="excerpt js-documentExcerpt">
+          {% highlight_suggestion suggestion %}
+        </p>
       </div>
-    </div>
+
+      <div class="opinion">
+        <span class="info-text">
+          <img src="{% static 'img/atention.svg' %}">
+          <h3>E deu a seguinte opinião nele:</h3>
+        </span>
+        
+        <p class="suggestion js-suggestion">{{suggestion.content}}</p>
+      </div>
+
+      <footer class="actions">
+        <a href="#" class="disagree js-opinionButton" data-opinion="approve" data-text="Concordo">Concordo</a>
+        <a href="#" class="indifferent js-opinionButton" data-opinion="neutral" data-text="Indiferente">Indiferente</a>
+        <a href="#" class="agree js-opinionButton" data-opinion="reject" data-text="Discordo">Discordo</a>
+        <a href="#" class="skip js-nextOpinion" data-text="Próxima Opinião">Próxima Opinião</a>
+      </footer>
+    </article>
   {% endfor %}
 {% endblock content %}
