--- a/src/templates/components/opinion-modal.html
+++ b/src/templates/components/opinion-modal.html
@@ -40,9 +40,9 @@
       </div>
 
       <footer class="actions">
-        <a href="#" class="disagree js-opinionButton" data-opinion="approve" data-text="Concordo">Concordo</a>
+        <a href="#" class="disagree js-opinionButton" data-opinion="reject" data-text="Discordo">Discordo</a>
         <a href="#" class="indifferent js-opinionButton" data-opinion="neutral" data-text="Indiferente">Indiferente</a>
-        <a href="#" class="agree js-opinionButton" data-opinion="reject" data-text="Discordo">Discordo</a>
+        <a href="#" class="agree js-opinionButton" data-opinion="approve" data-text="Concordo">Concordo</a>
         <a href="#" class="skip js-nextOpinion" data-text="Próxima Opinião">Próxima Opinião</a>
       </footer>
     </article>
