--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -85,6 +85,8 @@
 {% endblock content %}
 
 {% block page_js %}
+  <script src="{% static 'popper.js/dist/umd/popper.js' %}"></script>
+  <script src="{% static 'tooltip.js/dist/umd/tooltip.js' %}"></script>
   <script src="{% static 'js/components/documentExcerpt/view.js' %}"></script>
   <script src="{% static 'js/components/documentBody/view.js' %}"></script>
   <script src="{% static 'js/components/infoButton/view.js' %}"></script>
@@ -97,5 +99,7 @@
   <script src="{% static 'js/components/body/view.js' %}"></script>
   <script src="{% static 'js/components/opinionModal/view.js' %}"></script>
   <script src="{% static 'js/components/opinionModal/controller.js' %}"></script>
+  <script src="{% static 'js/components/textHighlight/view.js' %}"></script>
+  <script src="{% static 'js/components/highlightTooltip/view.js' %}"></script>
   <script src="{% static 'js/pages/document.js' %}"></script>
 {% endblock page_js %}
