--- a/src/static/scss/components/_projects-list.scss
+++ b/src/static/scss/components/_projects-list.scss
@@ -1,26 +1,70 @@
 .projects-list {
-  @include bp-mediumup {
-    overflow-y: auto;
+  box-sizing: border-box;
+  padding: 2rem 1rem;
+
+  @include bp-smallup {
+    padding: 4rem 8vw;
+  }
+
+  & > .header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    & > .tabs {
+      display: none;
+
+      @include bp-smallup {
+        display: flex;
+      }
+
+      & > * + * {
+        margin-left: 2rem;
+
+        @include bp-mediumup {
+          margin-left: 4rem;
+        }
+      }
+
+      & > .tab {
+        font-size: 1rem;
+        font-weight: bold;
+
+        cursor: pointer;
+
+        color: $color-gray;
+
+        @include bp-mediumup {
+          font-size: 1.25rem;
+        }
+
+        &:hover {
+          transition: color .15s ease-in-out;
+
+          color: $color-deep-gray;
+        }
+
+        &.-active {
+          color: $color-brand;
+        }
+      }
+    }
   }
 
   & > .search {
-    margin-top: 2rem;
-
-    @include bp-mediumup {
-      width: calc(50% - 3rem);
-      margin-top: 0;
-    }
+    margin-top: 1.5rem;
   }
 
   & > .list {
     margin-top: 1rem;
-  }
 
-  & > .list > h2 {
-    margin-top: 2.5rem;
-  }
+    @include bp-smallup {
+      display: grid;
 
-  & > .list > .simple-card {
-    margin-top: 1rem;
+      grid-column-gap: 1.5rem;
+      grid-row-gap: 1.5rem;
+      grid-template-columns: repeat(auto-fill, minmax(347px, 1fr));
+      grid-auto-rows: minmax(347px, 1fr);
+    }
   }
 }
